# opencti-connector

./: .dockerignore  .env.example  .env.sample  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  enrichment_config.example.yml  enrichment_connector.py  pyproject.toml
.github/workflows/: docker-publish.yml
__metadata__/: connector_manifest.json
src/: main.py  requirements.txt
src/connector/: connector.py
tests/tests_connector/: test_connector.py  test_settings.py
