[tool.poetry]
name = "opencti-connector-vulners"
version = "0.1.0"
description = "Vulners enrichment connector for OpenCTI"
license = "Apache-2.0"
readme = "README.md"
package-mode = false

# Runtime dependencies are pinned in src/requirements.txt (pip-installed in the
# Docker image), mirroring the upstream OpenCTI connector layout. The list below
# is kept for metadata/tooling parity only.
[tool.poetry.dependencies]
python = "^3.12"
pycti = "7.260609.0"
requests = "~2.33.0"
pydantic = ">=2.11,<3"
vulners = ">=3.1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
